--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
         "tailwindcss": "^4.1.1",
         "tw-animate-css": "^1.2.5",
         "vue": "^3.5.13",
-        "vue-final-modal": "^4.5.5"
+        "vue-final-modal": "^4.5.5",
+        "vue-input-otp": "^0.3.2"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
